fixed spacings on images

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,5 +1,6 @@
 @use "../../scss/abstracts/" as *;
 
+// classes
 .SoraBold {
    font-family: SoraBold, sans-serif;
 }
@@ -8,6 +9,7 @@
    font-family: RockSalt;
 }
 
+// ids
 #fingertips {
    color: $orange;
    transform: rotate(-6.58deg) !important;
@@ -17,6 +19,7 @@
    line-height: 2rem;
 }
 
+// Media queries
 @media (min-width: 500px) and (max-width: 767.98px) {
    #fingertips {
       transform: rotate(0deg) !important;
@@ -26,4 +29,11 @@
       width: 451px !important;
       height: 561px !important;
    }
+}
+
+@media (min-width: 768px) {
+   .col-md-8 {
+      width: 64% !important;
+   }
+
 }
